# finger-server

./: .gitignore  CMakeLists.txt  README.md  base64.cpp  base64.h  finger-server.service  finger_algorithm.cpp  finger_algorithm.h  finger_device.cpp  finger_device.h  finger_test.cpp  finger_wrapper.cpp  logger.cpp  logger.h  main.cpp  package.json  start.sh  test.sh  vcpkg.json  zkfp_sdk.cpp
demo/: Makefile  main  main.cpp  run.sh  tool.cpp
demo/data/: template.txt
demo/include/: libzkfp.h  zkinterface.h
doc/: ZKFinger SDK.md
electron/: main.ts
node/: package.json  pnpm-lock.yaml  test_finger.sh  tsconfig.json
node/src/: algorithm-func.ts  config.ts  device-func.ts  finger_service.ts  index.ts  main.ts  utils.ts
node/test/: finger_test.ts
test/: package.json  pnpm-lock.yaml
test/src/: main.ts  utils.ts
test/test/: finger_test.ts
